NetBSD Problem Report #51434

From www@NetBSD.org  Sun Aug 21 20:05:49 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 5CF927A281
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 21 Aug 2016 20:05:49 +0000 (UTC)
Message-Id: <20160821200548.762B87A2C1@mollari.NetBSD.org>
Date: Sun, 21 Aug 2016 20:05:48 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/netinet6/icmp6.c:1536: redundant condition ?
X-Send-Pr-Version: www-1.0

>Number:         51434
>Category:       kern
>Synopsis:       src/sys/netinet6/icmp6.c:1536: redundant condition ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Aug 21 20:10:00 +0000 2016
>Closed-Date:    Fri Aug 26 23:29:06 +0000 2016
>Last-Modified:  Fri Aug 26 23:29:06 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160821
>Organization:
>Environment:
>Description:
src/sys/netinet6/icmp6.c:1536]: (style) Redundant condition: If 'EXPR == '.'', the comparison 'EXPR' is always true.

Source code is

            if (*p && *p == '.')
                i++;

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51434 CVS commit: src/sys/netinet6
Date: Fri, 26 Aug 2016 21:48:31 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Fri Aug 26 21:48:31 UTC 2016

 Modified Files:
 	src/sys/netinet6: icmp6.c

 Log Message:
 PR 51434 David Binderman: remove redundant test.


 To generate a diff of this commit:
 cvs rdiff -u -r1.196 -r1.197 src/sys/netinet6/icmp6.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Fri, 26 Aug 2016 23:29:06 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.