PR 51434 David Binderman: remove redundant test.